feat: update docs Swagger
